Name:                hierarchical-clustering
Version:             0.1
Synopsis:            Algorithms for single, average and complete linkage clustering.
--Description:
License:             BSD3
License-file:        LICENSE
Author:              Felipe Almeida Lessa
Maintainer:          felipe.lessa@gmail.com
Category:            Clustering
Build-type:          Simple
Cabal-version:       >=1.2


Library
  -- Modules exported by the library.
  -- Exposed-modules:

  -- Packages needed in order to build this package.
  -- Build-depends:

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:
