Name:                hierarchical-clustering
Version:             0.1
Synopsis:            Algorithms for single, average and complete linkage clustering.
--Description:
License:             BSD3
License-file:        LICENSE
Author:              Felipe Almeida Lessa
Maintainer:          felipe.lessa@gmail.com
Category:            Clustering
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules: Data.Clustering.Hierarchical
  Build-depends: base == 4.*
  GHC-Options: -Wall
